@@ -45,6 +45,14 @@
     <td valign="top">Whether to append <code>file</code>, if specified.</td>
     <td valign="top" align="center">No</td>
   </tr>
+  <tr>
+    <td valign="top">namespacePolicy</td>
+    <td valign="top">Sets the namespace policy as defined
+    by <code>org.apache.tools.ant.util.DOMElementWriter.XmlNamespacePolicy</code>. Valid
+    values are "ignore," "elementsOnly," or "all." Default is
+    "ignore".</td>
+    <td valign="top" align="center">No</td>
+  </tr>
 </table>
 <h3>Parameters specified as nested elements</h3>
 Nested XML content is required.
